@@ -12,6 +12,7 @@ import com.bazaarvoice.jolt.modifier.spec.ModifierCompositeSpec;
 import ru.ilyshkafox.jolt.functions.EscapeJsonFunction;
 import ru.ilyshkafox.jolt.functions.UnescapeJsonFunction;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -19,12 +20,12 @@ public class Module implements SpecDriven, ContextualTransform {
     private final ModifierCompositeSpec rootSpec;
 
     public Module(Object spec) {
-        Map<String, Function> functionsMap = Map.of(
-                "escapeJson", new EscapeJsonFunction(),
-                "unescapeJson", new UnescapeJsonFunction()
-        );
+        Map<String, Function> functionMap = new HashMap<>();
+        functionMap.put("escapeJson", new EscapeJsonFunction());
+        functionMap.put("unescapeJson", new UnescapeJsonFunction());
+        functionMap = Collections.unmodifiableMap(functionMap);
 
-        TemplatrSpecBuilder templatrSpecBuilder = new TemplatrSpecBuilder(OpMode.OVERWRITR, functionsMap);
+        TemplatrSpecBuilder templatrSpecBuilder = new TemplatrSpecBuilder(OpMode.OVERWRITR, functionMap);
         rootSpec = new ModifierCompositeSpec(ROOT_KEY, (Map<String, Object>) spec, OpMode.OVERWRITR,
                 templatrSpecBuilder);
     }
